test 95% pulir ultimos detalles,  subir documentacion, diagramas, etc